mergeChunk error message wrong when chunk on wrong shard

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.5.4
    • Affects Version/s: 2.5.2
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • Hide

      sh.splitAt("foo.bad",{_id:0})

      { "ok" : 1 }

      foo@local(2.5.2) > sh.moveChunk("foo.bad",{_id:-1},"shard0001")

      { "millis" : 32, "ok" : 1 }

      foo@local(2.5.2) > sh._adminCommand({mergeChunks:"foo.bad", bounds:[{_id:MinKey},{_id:MaxKey}]})
      {
      "ok" : 0,
      "errmsg" : "could not merge chunks, collection foo.bad does not contain a chunk starting at ...
      }

      Sometimes it says "ending at" - depending on where it started.

      Show
      sh.splitAt("foo.bad",{_id:0}) { "ok" : 1 } foo@local(2.5.2) > sh.moveChunk("foo.bad",{_id:-1},"shard0001") { "millis" : 32, "ok" : 1 } foo@local(2.5.2) > sh._adminCommand({mergeChunks:"foo.bad", bounds: [{_id:MinKey},{_id:MaxKey}] }) { "ok" : 0, "errmsg" : "could not merge chunks, collection foo.bad does not contain a chunk starting at ... } Sometimes it says "ending at" - depending on where it started.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Split a chunk. Move one of new (empty) chunks to another shard. Try to (re)merge those two chunks.

      Error message: "errmsg" : "could not merge chunks, collection foo.bar does not contain a chunk ending at

      { _id: 40.0 }

      "

      Error message should say that collection does not contain chunk ending at <key> on this shard or "the chunks you want to merge are on different shards".

            Assignee:
            Randolph Tan
            Reporter:
            Asya Kamsky
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: