SERVER-11055 mergeChunk error message wrong when chunk on wrong shard